[package]
name = "firstrust"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15"

axum = { version = "0.7", features = ["multipart"] }
serde_json = "1.0"

sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros", "chrono"] }

tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["serde", "macros"] } 
chrono = { version = "0.4", features = ["serde"] }
